--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   get: ^4.6.5
   responsive_builder: ^0.4.3
   get_storage: ^2.0.3
+  flutter_svg: ^1.1.5
 
 dev_dependencies:
   flutter_test:
